# freelang-mail-server

./: Cargo.toml  IMPLEMENTATION_REPORT.md  MAIL_ENCRYPTOR_DESIGN.md  README.md
.claude/projects/freelang-mail-server/memory/: MEMORY.md
src/: crypto_primitives.fl  lib.fl  lib.rs  mail_encryptor.fl  mail_structure.fl  main.fl
