[package]
name = "freelang-mail-server"
version = "1.0.0"
edition = "2021"
authors = ["Kim <kim@dclub.kr>"]
description = "Challenge 14: L0-Mail-Core - Zero-Plaintext Email Encryption (100% FreeLang)"

# FreeLang Implementation - No External Dependencies

[lib]
name = "l0_mail_core"
path = "src/lib.fl"

[[bin]]
name = "mail_encryptor"
path = "src/main.fl"

[profile.release]
opt-level = 3
lto = true
